refactored processing code

--- a/tutorials/Angular_data.ipynb
+++ b/tutorials/Angular_data.ipynb
@@ -33,14 +33,14 @@
    "outputs": [],
    "source": [
     "fcst = xr.DataArray(\n",
-    "    data=np.random.random_sample((1000, 1000)) * 360, \n",
-    "    dims=[\"space\", \"time\"], \n",
-    "    coords=[np.arange(0, 1000),  np.arange(0, 1000)]\n",
+    "    data=np.random.random_sample((1000, 1000)) * 360,\n",
+    "    dims=[\"space\", \"time\"],\n",
+    "    coords=[np.arange(0, 1000), np.arange(0, 1000)],\n",
     ")\n",
     "obs = xr.DataArray(\n",
-    "    data=np.random.random_sample((1000, 1000)) * 360, \n",
-    "    dims=[\"space\", \"time\"], \n",
-    "    coords=[np.arange(0, 1000),  np.arange(0, 1000)]\n",
+    "    data=np.random.random_sample((1000, 1000)) * 360,\n",
+    "    dims=[\"space\", \"time\"],\n",
+    "    coords=[np.arange(0, 1000), np.arange(0, 1000)],\n",
     ")"
    ]
   },
