--- a/tutorials/Continuous_Ranked_Probability_Score.ipynb
+++ b/tutorials/Continuous_Ranked_Probability_Score.ipynb
@@ -117,7 +117,7 @@
     }
    ],
    "source": [
-    "# Let's imagine the temperature will probably be around 3 degrees. We may imagine our forecast as per this graph \n",
+    "# Let's imagine the temperature will probably be around 3 degrees. We may imagine our forecast as per this graph\n",
     "fcst_pdf = scipy.stats.norm.pdf(fcst_thresholds, loc=3)\n",
     "plt.figure(figsize=(4, 3))\n",
     "plt.plot(fcst_thresholds, fcst_pdf)\n",
@@ -155,10 +155,10 @@
     }
    ],
    "source": [
-    "# We show the same function as a cumulative probability distribution (CDF). \n",
+    "# We show the same function as a cumulative probability distribution (CDF).\n",
     "# Each point on the CDF gives the probability that the temperature will be X or lower.\n",
-    "# It is certain (probability 1) that the the temperature will be 6 or less. \n",
-    "# It is pretty likely the temperature will be no more than 4 degrees. \n",
+    "# It is certain (probability 1) that the the temperature will be 6 or less.\n",
+    "# It is pretty likely the temperature will be no more than 4 degrees.\n",
     "# There is a 50% chance of it being no more than 3 degrees.\n",
     "fcst_cdf = scipy.stats.norm.cdf(fcst_thresholds, loc=3)\n",
     "plt.figure(figsize=(4, 3))\n",
@@ -198,12 +198,12 @@
     }
    ],
    "source": [
-    "# Let's say we observed a temperature of 4.5 degrees. \n",
+    "# Let's say we observed a temperature of 4.5 degrees.\n",
     "# Once we know the observation is 4.5, there is no chance of it being less than 4.4 degrees\n",
     "# There is 100% chance of observing less than 4.6 degrees.\n",
-    "# The perfect forecast would have been a step function at temperature = 4.5. \n",
+    "# The perfect forecast would have been a step function at temperature = 4.5.\n",
     "observed = 4.5\n",
-    "observed_cdf = numpy.heaviside(fcst_thresholds-observed, 1)\n",
+    "observed_cdf = numpy.heaviside(fcst_thresholds - observed, 1)\n",
     "plt.figure(figsize=(4, 3))\n",
     "plt.plot(fcst_thresholds, observed_cdf)\n",
     "plt.title(\"Chance of non-exceedance (observation)\")\n",
@@ -242,9 +242,9 @@
     "# We now compare the forecast cdf to the cdf representing the observation.\n",
     "# The area of the difference between the two curves is the CRPS.\n",
     "plt.figure(figsize=(4, 3))\n",
-    "plt.plot(fcst_thresholds, observed_cdf, label='Observation')\n",
-    "plt.plot(fcst_thresholds, fcst_cdf, label='Forecast')\n",
-    "plt.fill_between(fcst_thresholds, fcst_cdf, observed_cdf, color='gray', label='area for CRPS')\n",
+    "plt.plot(fcst_thresholds, observed_cdf, label=\"Observation\")\n",
+    "plt.plot(fcst_thresholds, fcst_cdf, label=\"Forecast\")\n",
+    "plt.fill_between(fcst_thresholds, fcst_cdf, observed_cdf, color=\"gray\", label=\"area for CRPS\")\n",
     "plt.title(\"Chance of non-exceedance\")\n",
     "plt.xlabel(\"Temperature\")\n",
     "plt.ylabel(\"Probability\")\n",
@@ -261,12 +261,12 @@
    "outputs": [],
    "source": [
     "# To use the crps_cdf function we need the forecast to be an xarray with values giving the cdf (probability) at each of many thresholds (degrees C in this example)\n",
-    "fcst_array = xarray.DataArray(coords={'temperature': fcst_thresholds}, data=fcst_cdf)\n",
+    "fcst_array = xarray.DataArray(coords={\"temperature\": fcst_thresholds}, data=fcst_cdf)\n",
     "\n",
     "# The observation is the value, but again provided in an xarray. We don't have to provide it as a CDF.\n",
     "obs_array = xarray.DataArray(4.5)\n",
     "\n",
-    "# When working with real data you are likely to have coordinates for the forecast and observation representing the \n",
+    "# When working with real data you are likely to have coordinates for the forecast and observation representing the\n",
     "# location and time, allowing you to assess many forecasts at once."
    ]
   },
@@ -291,9 +291,9 @@
    ],
    "source": [
     "# Here we calculate the CRPS for the forecast and observation above.\n",
-    "# Although not true in this example, the forecast might have had several dimensions. \n",
-    "# We need to specify which forecast dimension provides the thresholds for calculating the CRPS. \n",
-    "crps_cdf(fcst_array, obs_array, threshold_dim='temperature').total.values.round(3)"
+    "# Although not true in this example, the forecast might have had several dimensions.\n",
+    "# We need to specify which forecast dimension provides the thresholds for calculating the CRPS.\n",
+    "crps_cdf(fcst_array, obs_array, threshold_dim=\"temperature\").total.values.round(3)"
    ]
   },
   {
@@ -315,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "threshold_weights = xarray.DataArray(coords={'temperature': fcst_thresholds}, data=[1.0]*60 + [0]*40)"
+    "threshold_weights = xarray.DataArray(coords={\"temperature\": fcst_thresholds}, data=[1.0] * 60 + [0] * 40)"
    ]
   },
   {
@@ -349,9 +349,15 @@
     "# The area with weight 0 is not included in the CRPS calculation.\n",
     "# The area contributing to the CRPS calculation is shown below\n",
     "plt.figure(figsize=(4, 3))\n",
-    "plt.plot(fcst_thresholds, observed_cdf, label='Observation')\n",
-    "plt.plot(fcst_thresholds, fcst_cdf, label='Forecast')\n",
-    "plt.fill_between(fcst_thresholds[fcst_thresholds<=4], fcst_cdf[fcst_thresholds<=4], observed_cdf[fcst_thresholds<=4], color='gray', label='threshold-weighted CRPS')\n",
+    "plt.plot(fcst_thresholds, observed_cdf, label=\"Observation\")\n",
+    "plt.plot(fcst_thresholds, fcst_cdf, label=\"Forecast\")\n",
+    "plt.fill_between(\n",
+    "    fcst_thresholds[fcst_thresholds <= 4],\n",
+    "    fcst_cdf[fcst_thresholds <= 4],\n",
+    "    observed_cdf[fcst_thresholds <= 4],\n",
+    "    color=\"gray\",\n",
+    "    label=\"threshold-weighted CRPS\",\n",
+    ")\n",
     "plt.title(\"Chance of non-exceedance\")\n",
     "plt.xlabel(\"Temperature\")\n",
     "plt.ylabel(\"Probability\")\n",
@@ -377,7 +383,7 @@
    ],
    "source": [
     "# Calculate the area of the threshold-weighted CRPS\n",
-    "crps_cdf(fcst_array, obs_array, threshold_dim='temperature', threshold_weight=threshold_weights).total.values.round(3)"
+    "crps_cdf(fcst_array, obs_array, threshold_dim=\"temperature\", threshold_weight=threshold_weights).total.values.round(3)"
    ]
   },
   {
