--- a/tutorials/Murphy_Diagrams.ipynb
+++ b/tutorials/Murphy_Diagrams.ipynb
@@ -70,8 +70,8 @@
     "obs = xr.DataArray(data=40 * np.random.random(N), dims=[\"time\"], coords={\"time\": np.arange(0, N)})\n",
     "\n",
     "# Generate synthetic forecasts by adding noise to each observation\n",
-    "fcst1 = 0.9 * obs + skewnorm.rvs(4, size=N) # fcst1 has a low bias and is unlikely to forecast outside 0 to 39\n",
-    "fcst2 = 1.1 * obs - skewnorm.rvs(4, size=N) # fcst2 has a high bias and forecasts colder than 0 and warmer than 40"
+    "fcst1 = 0.9 * obs + skewnorm.rvs(4, size=N)  # fcst1 has a low bias and is unlikely to forecast outside 0 to 39\n",
+    "fcst2 = 1.1 * obs - skewnorm.rvs(4, size=N)  # fcst2 has a high bias and forecasts colder than 0 and warmer than 40"
    ]
   },
   {
@@ -1110,11 +1110,27 @@
    ],
    "source": [
     "fig = px.scatter(title=\"First 20 observations and corresponding forecasts\")\n",
-    "fig.add_scatter(y=obs[:20], name = \"Observations\", line=dict(dash='solid'),)\n",
-    "fig.add_scatter(y=fcst1[:20], name = \"fcst1 (biased cool)\", line=dict(dash='dot'),)\n",
-    "fig.add_scatter(y=fcst2[:20], name = \"fcst2 (biased warm)\", line=dict(dash='dash'),)\n",
-    "fig.update_layout(xaxis_title=\"Forecast lead time\",)\n",
-    "fig.update_layout(yaxis_title=\"Temperature (Celcius)\",)\n",
+    "fig.add_scatter(\n",
+    "    y=obs[:20],\n",
+    "    name=\"Observations\",\n",
+    "    line=dict(dash=\"solid\"),\n",
+    ")\n",
+    "fig.add_scatter(\n",
+    "    y=fcst1[:20],\n",
+    "    name=\"fcst1 (biased cool)\",\n",
+    "    line=dict(dash=\"dot\"),\n",
+    ")\n",
+    "fig.add_scatter(\n",
+    "    y=fcst2[:20],\n",
+    "    name=\"fcst2 (biased warm)\",\n",
+    "    line=dict(dash=\"dash\"),\n",
+    ")\n",
+    "fig.update_layout(\n",
+    "    xaxis_title=\"Forecast lead time\",\n",
+    ")\n",
+    "fig.update_layout(\n",
+    "    yaxis_title=\"Temperature (Celcius)\",\n",
+    ")\n",
     "fig.show()"
    ]
   },
@@ -1192,8 +1208,8 @@
     "# Plot the results\n",
     "ms1[\"Mean elementary score\"].plot()\n",
     "ms2[\"Mean elementary score\"].plot()\n",
-    "plt.title('fcst1 (blue), fcst2 (orange)')\n",
-    "plt.suptitle('Murphy Score (for mean)')"
+    "plt.title(\"fcst1 (blue), fcst2 (orange)\")\n",
+    "plt.suptitle(\"Murphy Score (for mean)\")"
    ]
   },
   {
