--- a/tutorials/Quantile_Loss.ipynb
+++ b/tutorials/Quantile_Loss.ipynb
@@ -52,26 +52,18 @@
    "source": [
     "lat = np.linspace(-90, 90, 10)\n",
     "lon = np.linspace(-180, 180, 20)\n",
-    "times = pd.date_range('2023-11-19', periods=5)\n",
+    "times = pd.date_range(\"2023-11-19\", periods=5)\n",
     "forecast_90th = np.random.uniform(0.7, 1.0, size=(len(lat), len(lon), len(times)))\n",
     "forecast_90th_da = xr.DataArray(\n",
-    "    forecast_90th,\n",
-    "    dims=('lat', 'lon', 'time'),\n",
-    "    coords={'lat': lat, 'lon': lon, 'time': times}\n",
+    "    forecast_90th, dims=(\"lat\", \"lon\", \"time\"), coords={\"lat\": lat, \"lon\": lon, \"time\": times}\n",
     ")\n",
     "forecast_50th = np.random.uniform(0.3, 0.6, size=(len(lat), len(lon), len(times)))\n",
     "forecast_50th_da = xr.DataArray(\n",
-    "    forecast_50th,\n",
-    "    dims=('lat', 'lon', 'time'),\n",
-    "    coords={'lat': lat, 'lon': lon, 'time': times}\n",
+    "    forecast_50th, dims=(\"lat\", \"lon\", \"time\"), coords={\"lat\": lat, \"lon\": lon, \"time\": times}\n",
     ")\n",
     "\n",
     "obs = np.random.rand(len(lat), len(lon), len(times))\n",
-    "obs_da = xr.DataArray(\n",
-    "    obs,\n",
-    "    dims=('lat', 'lon', 'time'),\n",
-    "    coords={'lat': lat, 'lon': lon, 'time': times}\n",
-    ")"
+    "obs_da = xr.DataArray(obs, dims=(\"lat\", \"lon\", \"time\"), coords={\"lat\": lat, \"lon\": lon, \"time\": times})"
    ]
   },
   {
@@ -129,8 +121,8 @@
     }
    ],
    "source": [
-    "overall_qs_med_time = quantile_score(fcst=forecast_50th_da, obs=obs_da, alpha=0.5, preserve_dims=['time'])\n",
-    "overall_qs_90th_time = quantile_score(fcst=forecast_90th_da, obs=obs_da, alpha=0.9, preserve_dims=['time'])\n",
+    "overall_qs_med_time = quantile_score(fcst=forecast_50th_da, obs=obs_da, alpha=0.5, preserve_dims=[\"time\"])\n",
+    "overall_qs_90th_time = quantile_score(fcst=forecast_90th_da, obs=obs_da, alpha=0.9, preserve_dims=[\"time\"])\n",
     "print(\n",
     "    f\"Quantile score values by preserving time dimension\"\n",
     "    f\"\\n FCST_50 (targeted at 50th percentile):  {np.round(overall_qs_med_time.values, 3)}\"\n",
@@ -163,12 +155,12 @@
    "source": [
     "weights_data = np.ones_like(obs)\n",
     "weights_data[:, -2:, -2:] = 2\n",
-    "weights = xr.DataArray(weights_data, dims=('lat', 'lon', 'time'))\n",
+    "weights = xr.DataArray(weights_data, dims=(\"lat\", \"lon\", \"time\"))\n",
     "weighted_time_loss_score_med = quantile_score(\n",
-    "    fcst=forecast_50th_da, obs=obs_da, alpha=0.5, preserve_dims=['time'], weights=weights\n",
+    "    fcst=forecast_50th_da, obs=obs_da, alpha=0.5, preserve_dims=[\"time\"], weights=weights\n",
     ")\n",
     "weighted_time_loss_score_90th = quantile_score(\n",
-    "    fcst=forecast_90th_da, obs=obs_da, alpha=0.9, preserve_dims=['time'], weights=weights\n",
+    "    fcst=forecast_90th_da, obs=obs_da, alpha=0.9, preserve_dims=[\"time\"], weights=weights\n",
     ")\n",
     "print(\n",
     "    f\"GPL scores by preserving 'time' dimension and using an array of weights are:\"\n",
