--- a/tutorials/Root_Mean_Squared_Error.ipynb
+++ b/tutorials/Root_Mean_Squared_Error.ipynb
@@ -73,8 +73,8 @@
    "outputs": [],
    "source": [
     "# Import the same gridded forecasts and one gridded analysis used in the MSE tutorial\n",
-    "forecast = xarray.open_dataset('forecast_grid.nc')\n",
-    "analysis = xarray.open_dataset('analysis_grid.nc')"
+    "forecast = xarray.open_dataset(\"forecast_grid.nc\")\n",
+    "analysis = xarray.open_dataset(\"analysis_grid.nc\")"
    ]
   },
   {
@@ -102,8 +102,8 @@
    "outputs": [],
    "source": [
     "# Calculate the mean differences using mae and mse\n",
-    "meanAbsoluteDifference = mae(forecast.temp_scrn,forecast.temp_scrn[0], reduce_dims='time') \n",
-    "rootMeanSquaredDifference = rmse(forecast.temp_scrn,forecast.temp_scrn[0], reduce_dims='time') "
+    "meanAbsoluteDifference = mae(forecast.temp_scrn, forecast.temp_scrn[0], reduce_dims=\"time\")\n",
+    "rootMeanSquaredDifference = rmse(forecast.temp_scrn, forecast.temp_scrn[0], reduce_dims=\"time\")"
    ]
   },
   {
@@ -137,8 +137,8 @@
    ],
    "source": [
     "# Figure One - Side by Side Comparison of MAE and RMSE\n",
-    "names = pandas.Index(['MAE', 'RMSE'], name=\"Method\")\n",
-    "xarray.concat([meanAbsoluteDifference, rootMeanSquaredDifference], dim=names).plot(col='Method')"
+    "names = pandas.Index([\"MAE\", \"RMSE\"], name=\"Method\")\n",
+    "xarray.concat([meanAbsoluteDifference, rootMeanSquaredDifference], dim=names).plot(col=\"Method\")"
    ]
   },
   {
@@ -164,7 +164,7 @@
    "outputs": [],
    "source": [
     "# Extract the forecast of interest, to compare to analysis.temp_scrn\n",
-    "forecast_of_interest = forecast.temp_scrn[24*4-1]"
+    "forecast_of_interest = forecast.temp_scrn[24 * 4 - 1]"
    ]
   },
   {
@@ -200,9 +200,9 @@
    ],
    "source": [
     "# Check that the RMSE is (to within rounding) the square-root of the MSE.\n",
-    "print('MAE: ', mae_overall.values.round(2))\n",
-    "print('MSE: ', mse_overall.values.round(2))\n",
-    "print('RMSE: ', rmse_overall.values.round(2))"
+    "print(\"MAE: \", mae_overall.values.round(2))\n",
+    "print(\"MSE: \", mse_overall.values.round(2))\n",
+    "print(\"RMSE: \", rmse_overall.values.round(2))"
    ]
   },
   {
@@ -236,16 +236,16 @@
    ],
    "source": [
     "# Figure 2 - MAE and RMSE as a function of latitude\n",
-    "mae_by_latitude = mae(forecast_of_interest, analysis.temp_scrn, reduce_dims='lon')\n",
-    "rmse_by_latitude = rmse(forecast_of_interest, analysis.temp_scrn, reduce_dims='lon')\n",
+    "mae_by_latitude = mae(forecast_of_interest, analysis.temp_scrn, reduce_dims=\"lon\")\n",
+    "rmse_by_latitude = rmse(forecast_of_interest, analysis.temp_scrn, reduce_dims=\"lon\")\n",
     "\n",
     "# Prepare some labelling for the plot\n",
     "mae_by_latitude.name = \"Mean Error\"\n",
     "rmse_by_latitude.name = \"Mean Error\"\n",
-    "names = pandas.Index(['MAE (C)', 'RMSE (C)'], name=\"Method\")\n",
+    "names = pandas.Index([\"MAE (C)\", \"RMSE (C)\"], name=\"Method\")\n",
     "\n",
     "# Make the plot\n",
-    "xarray.concat([mae_by_latitude, rmse_by_latitude], dim=names).plot(col='Method')"
+    "xarray.concat([mae_by_latitude, rmse_by_latitude], dim=names).plot(col=\"Method\")"
    ]
   },
   {
