--- a/tutorials/Weighting_Results.ipynb
+++ b/tutorials/Weighting_Results.ipynb
@@ -53,9 +53,9 @@
    "outputs": [],
    "source": [
     "# Here we consider the errors at 4 days lead time into the prediction, at a specific hour, compared to the analysis for that time step.\n",
-    "forecast = xarray.open_dataset('forecast_grid.nc')\n",
-    "analysis = xarray.open_dataset('analysis_grid.nc')\n",
-    "time_step_of_interest = forecast.temp_scrn[24*4-1]"
+    "forecast = xarray.open_dataset(\"forecast_grid.nc\")\n",
+    "analysis = xarray.open_dataset(\"analysis_grid.nc\")\n",
+    "time_step_of_interest = forecast.temp_scrn[24 * 4 - 1]"
    ]
   },
   {
@@ -75,7 +75,9 @@
    "source": [
     "# The standard latitude weight array has a magnitude of around 1 at the equator, and reduce to zero approaching the poles\n",
     "weights = scores.functions.create_latitude_weights(analysis.lat)\n",
-    "print(f\"The maximum weighting in the array is {weights.max().values}. This has an insignificant floating point rounding error.\")"
+    "print(\n",
+    "    f\"The maximum weighting in the array is {weights.max().values}. This has an insignificant floating point rounding error.\"\n",
+    ")"
    ]
   },
   {
@@ -507,7 +509,7 @@
    "source": [
     "# We will use a neutral weighting to confirm that nothing strange is happening. You could experiment with\n",
     "# creating a population density weights array to contrast different weighting strategies\n",
-    "ones = weights.where(weights == 1, other=1)  "
+    "ones = weights.where(weights == 1, other=1)"
    ]
   },
   {
@@ -517,9 +519,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unweighted_mae = scores.continuous.mae(time_step_of_interest, analysis.temp_scrn, reduce_dims='lon')\n",
-    "neutral_mae = scores.continuous.mae(time_step_of_interest, analysis.temp_scrn, weights=ones, reduce_dims='lon')\n",
-    "weighted_mae = scores.continuous.mae(time_step_of_interest, analysis.temp_scrn, weights=weights, reduce_dims='lon')"
+    "unweighted_mae = scores.continuous.mae(time_step_of_interest, analysis.temp_scrn, reduce_dims=\"lon\")\n",
+    "neutral_mae = scores.continuous.mae(time_step_of_interest, analysis.temp_scrn, weights=ones, reduce_dims=\"lon\")\n",
+    "weighted_mae = scores.continuous.mae(time_step_of_interest, analysis.temp_scrn, weights=weights, reduce_dims=\"lon\")"
    ]
   },
   {
@@ -551,8 +553,8 @@
    ],
    "source": [
     "# Figure One - Side by Side Comparison of alternative weighting strategies\n",
-    "names = pandas.Index(['Unweighted', 'Neutral', 'By Latitude'], name=\"Method\")\n",
-    "xarray.concat([unweighted_mae, neutral_mae, weighted_mae], dim=names).plot(col='Method')"
+    "names = pandas.Index([\"Unweighted\", \"Neutral\", \"By Latitude\"], name=\"Method\")\n",
+    "xarray.concat([unweighted_mae, neutral_mae, weighted_mae], dim=names).plot(col=\"Method\")"
    ]
   },
   {
@@ -579,21 +581,25 @@
     "import os\n",
     "import requests\n",
     "\n",
+    "\n",
     "def basic_fetch(url, filename, expected_hash):\n",
     "    if os.path.exists(filename):\n",
     "        print(\"File already exists, skipping download\")\n",
     "    else:\n",
     "        response = requests.get(url, allow_redirects=True)\n",
     "        if response.ok:\n",
-    "            outfile = open(filename, 'wb')  # This will write the file out to the current directory, typically where this notebook is being run\n",
-    "            outfile.write(response.content)        \n",
-    "            \n",
-    "    content = open(filename, 'rb').read()\n",
+    "            outfile = open(\n",
+    "                filename, \"wb\"\n",
+    "            )  # This will write the file out to the current directory, typically where this notebook is being run\n",
+    "            outfile.write(response.content)\n",
+    "\n",
+    "    content = open(filename, \"rb\").read()\n",
     "    found_hash = hashlib.sha256(content).hexdigest()\n",
     "    if found_hash != expected_hash:\n",
     "        os.remove(filename)\n",
-    "        print(\"File has unexpected contents. The file has been removed - please download manually and check the data carefully\")\n",
-    "        "
+    "        print(\n",
+    "            \"File has unexpected contents. The file has been removed - please download manually and check the data carefully\"\n",
+    "        )"
    ]
   },
   {
@@ -613,10 +619,10 @@
    "source": [
     "# Fetch the data for the tutorial as a zip file\n",
     "\n",
-    "data_url = 'https://www.abs.gov.au/statistics/people/population/regional-population/2021-22/Australian_Population_Grid_2022_in_GEOTIFF_format.zip'\n",
-    "filename = 'auspopn.zip'\n",
-    "data_hash = 'a14172681cd343f69150de7f2939f1102aba1e7f6fe1aebde0e87c45069032a2' # Taken 23/8/23\n",
-    "basic_fetch(data_url, filename, data_hash)    "
+    "data_url = \"https://www.abs.gov.au/statistics/people/population/regional-population/2021-22/Australian_Population_Grid_2022_in_GEOTIFF_format.zip\"\n",
+    "filename = \"auspopn.zip\"\n",
+    "data_hash = \"a14172681cd343f69150de7f2939f1102aba1e7f6fe1aebde0e87c45069032a2\"  # Taken 23/8/23\n",
+    "basic_fetch(data_url, filename, data_hash)"
    ]
   },
   {
@@ -626,14 +632,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "zf = zipfile.ZipFile('auspopn.zip', 'r')          # Open the zip file\n",
-    "popntiff = zf.read('apg22r_1_0_0.tif')            # Read the geotiff data file from the archive into memory\n",
-    "bytes = io.BytesIO(popntiff)                      # Create an in-memory file-like object from the data\n",
-    "auspop = xarray.open_dataset(bytes, engine='rasterio', band_as_variable=True)   # Open as an xarray, with hints for rasterio\n",
-    "auspop = auspop.rio.reproject(\"EPSG:4326\")        # Move from x/y coords to lat/lon values\n",
-    "auspop = auspop.rename({'x': 'lon', 'y': 'lat'})  # Rename axes for consistency\n",
-    "auspop = auspop.band_1                            # Focus on the variable of interest\n",
-    "auspop_lr = auspop.coarsen({'lat': 4, 'lon': 4}, boundary='trim').mean()  # Reduce the resolution to closer to the data"
+    "zf = zipfile.ZipFile(\"auspopn.zip\", \"r\")  # Open the zip file\n",
+    "popntiff = zf.read(\"apg22r_1_0_0.tif\")  # Read the geotiff data file from the archive into memory\n",
+    "bytes = io.BytesIO(popntiff)  # Create an in-memory file-like object from the data\n",
+    "auspop = xarray.open_dataset(\n",
+    "    bytes, engine=\"rasterio\", band_as_variable=True\n",
+    ")  # Open as an xarray, with hints for rasterio\n",
+    "auspop = auspop.rio.reproject(\"EPSG:4326\")  # Move from x/y coords to lat/lon values\n",
+    "auspop = auspop.rename({\"x\": \"lon\", \"y\": \"lat\"})  # Rename axes for consistency\n",
+    "auspop = auspop.band_1  # Focus on the variable of interest\n",
+    "auspop_lr = auspop.coarsen({\"lat\": 4, \"lon\": 4}, boundary=\"trim\").mean()  # Reduce the resolution to closer to the data"
    ]
   },
   {
@@ -679,18 +687,18 @@
    "source": [
     "# Crop all data to the Australian Region\n",
     "\n",
-    "min_lon = 100 \n",
+    "min_lon = 100\n",
     "max_lon = 160\n",
     "min_lat = -5\n",
     "max_lat = -45\n",
     "\n",
     "\n",
-    "fcst_aus = time_step_of_interest.sel(lat=slice(min_lat,max_lat), lon=slice(min_lon,max_lon))\n",
-    "anal_aus = analysis.sel(lat=slice(min_lat,max_lat), lon=slice(min_lon,max_lon))\n",
-    "lat_weight_aus = weights.sel(lat=slice(min_lat,max_lat))  # no lons included, uses broadcasting\n",
-    "popn_density_aus = auspop_normalised.sel(lat=slice(min_lat,max_lat), lon=slice(min_lon,max_lon))\n",
+    "fcst_aus = time_step_of_interest.sel(lat=slice(min_lat, max_lat), lon=slice(min_lon, max_lon))\n",
+    "anal_aus = analysis.sel(lat=slice(min_lat, max_lat), lon=slice(min_lon, max_lon))\n",
+    "lat_weight_aus = weights.sel(lat=slice(min_lat, max_lat))  # no lons included, uses broadcasting\n",
+    "popn_density_aus = auspop_normalised.sel(lat=slice(min_lat, max_lat), lon=slice(min_lon, max_lon))\n",
     "popn_density_aus = popn_density_aus.interp_like(anal_aus)\n",
-    "aus_popn_neutrual = (popn_density_aus / popn_density_aus)"
+    "aus_popn_neutrual = popn_density_aus / popn_density_aus"
    ]
   },
   {
@@ -700,10 +708,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aus_unweighted_mae = scores.continuous.mae(fcst_aus, anal_aus.temp_scrn, reduce_dims='lon')\n",
-    "aus_lat_weighted_mae = scores.continuous.mae(fcst_aus, anal_aus.temp_scrn, weights=lat_weight_aus, reduce_dims='lon')\n",
-    "aus_popn_weighted_mae = scores.continuous.mae(fcst_aus, anal_aus.temp_scrn, weights=popn_density_aus, reduce_dims='lon')\n",
-    "aus_popn_neutral_mae = scores.continuous.mae(fcst_aus, anal_aus.temp_scrn, weights=aus_popn_neutrual, reduce_dims='lon')"
+    "aus_unweighted_mae = scores.continuous.mae(fcst_aus, anal_aus.temp_scrn, reduce_dims=\"lon\")\n",
+    "aus_lat_weighted_mae = scores.continuous.mae(fcst_aus, anal_aus.temp_scrn, weights=lat_weight_aus, reduce_dims=\"lon\")\n",
+    "aus_popn_weighted_mae = scores.continuous.mae(fcst_aus, anal_aus.temp_scrn, weights=popn_density_aus, reduce_dims=\"lon\")\n",
+    "aus_popn_neutral_mae = scores.continuous.mae(fcst_aus, anal_aus.temp_scrn, weights=aus_popn_neutrual, reduce_dims=\"lon\")"
    ]
   },
   {
@@ -735,8 +743,10 @@
    ],
    "source": [
     "# Figure One - Side by Side Comparison of alternative weighting strategies\n",
-    "names = pandas.Index(['Unweighted', 'By Latitude', 'By Density', 'Where Population'], name=\"Method\")\n",
-    "xarray.concat([aus_unweighted_mae, aus_lat_weighted_mae, aus_popn_weighted_mae, aus_popn_neutral_mae], dim=names).plot(col='Method')"
+    "names = pandas.Index([\"Unweighted\", \"By Latitude\", \"By Density\", \"Where Population\"], name=\"Method\")\n",
+    "xarray.concat([aus_unweighted_mae, aus_lat_weighted_mae, aus_popn_weighted_mae, aus_popn_neutral_mae], dim=names).plot(\n",
+    "    col=\"Method\"\n",
+    ")"
    ]
   },
   {
