--- a/tutorials/Isotonic_Regression.ipynb
+++ b/tutorials/Isotonic_Regression.ipynb
@@ -77,11 +77,7 @@
    "outputs": [],
    "source": [
     "iso_fit_result = isotonic_fit(\n",
-    "    fcst=forecast_data,\n",
-    "    obs=observation_data,\n",
-    "    functional=\"mean\",\n",
-    "    bootstraps=100,\n",
-    "    confidence_level=0.95\n",
+    "    fcst=forecast_data, obs=observation_data, functional=\"mean\", bootstraps=100, confidence_level=0.95\n",
     ")"
    ]
   },
@@ -1691,9 +1687,9 @@
    ],
    "source": [
     "figure = go.Figure()\n",
-    "band_fillcolour = 'rgba(184,225,134,0.5)'\n",
-    "line_colour = '#4dac26'\n",
-    "hist_color = 'rgba(128,0,128,0.2)'\n",
+    "band_fillcolour = \"rgba(184,225,134,0.5)\"\n",
+    "line_colour = \"#4dac26\"\n",
+    "hist_color = \"rgba(128,0,128,0.2)\"\n",
     "\n",
     "total_min = min(np.min(iso_fit_result[\"fcst_sorted\"]), np.min(iso_fit_result[\"confidence_band_lower_values\"]))\n",
     "total_max = max(np.max(iso_fit_result[\"fcst_sorted\"]), np.max(iso_fit_result[\"confidence_band_upper_values\"]))\n",
@@ -1701,59 +1697,63 @@
     "# Generate 10 bins for forecast histogram\n",
     "bins = np.linspace(np.min(iso_fit_result[\"fcst_sorted\"]), np.max(iso_fit_result[\"fcst_sorted\"]), 11)\n",
     "hist, _ = np.histogram(\n",
-    "        iso_fit_result[\"fcst_sorted\"],\n",
-    "        bins=bins,\n",
-    "        weights=iso_fit_result[\"fcst_counts\"],\n",
-    "    )\n",
+    "    iso_fit_result[\"fcst_sorted\"],\n",
+    "    bins=bins,\n",
+    "    weights=iso_fit_result[\"fcst_counts\"],\n",
+    ")\n",
     "\n",
     "figure.add_trace(\n",
     "    go.Scatter(\n",
     "        x=iso_fit_result[\"fcst_sorted\"],\n",
     "        y=iso_fit_result[\"confidence_band_upper_values\"],\n",
-    "        mode='lines',\n",
+    "        mode=\"lines\",\n",
     "        line=dict(width=0, color=band_fillcolour),\n",
     "        showlegend=False,\n",
-    "        name='95% confidence band'\n",
+    "        name=\"95% confidence band\",\n",
     "    )\n",
     ")\n",
-    "figure.add_trace(go.Scatter(\n",
-    "    x=iso_fit_result[\"fcst_sorted\"],\n",
-    "    y=iso_fit_result[\"confidence_band_lower_values\"],\n",
-    "    mode='lines',\n",
-    "    line=dict(width=0, color=band_fillcolour),\n",
-    "    fillcolor=band_fillcolour,\n",
-    "    fill='tonexty',\n",
-    "    name='95% confidence band'\n",
-    "))\n",
-    "figure.add_shape(\n",
-    "    type='line', x0=total_min, y0=total_min, x1=total_max, y1=total_max,\n",
-    "    line=dict(color='black', dash='dot')\n",
+    "figure.add_trace(\n",
+    "    go.Scatter(\n",
+    "        x=iso_fit_result[\"fcst_sorted\"],\n",
+    "        y=iso_fit_result[\"confidence_band_lower_values\"],\n",
+    "        mode=\"lines\",\n",
+    "        line=dict(width=0, color=band_fillcolour),\n",
+    "        fillcolor=band_fillcolour,\n",
+    "        fill=\"tonexty\",\n",
+    "        name=\"95% confidence band\",\n",
+    "    )\n",
     ")\n",
-    "figure.add_trace(go.Scatter(\n",
-    "    x=iso_fit_result[\"fcst_sorted\"], y=iso_fit_result[\"regression_values\"], name='Calibrated line', \n",
-    "    mode='lines', line=dict(color=line_colour)\n",
-    "))\n",
+    "figure.add_shape(\n",
+    "    type=\"line\", x0=total_min, y0=total_min, x1=total_max, y1=total_max, line=dict(color=\"black\", dash=\"dot\")\n",
+    ")\n",
+    "figure.add_trace(\n",
+    "    go.Scatter(\n",
+    "        x=iso_fit_result[\"fcst_sorted\"],\n",
+    "        y=iso_fit_result[\"regression_values\"],\n",
+    "        name=\"Calibrated line\",\n",
+    "        mode=\"lines\",\n",
+    "        line=dict(color=line_colour),\n",
+    "    )\n",
+    ")\n",
     "figure.add_bar(\n",
-    "    x= bins,\n",
+    "    x=bins,\n",
     "    y=hist,\n",
     "    width=1.5,\n",
-    "    marker=dict(color=hist_color,),\n",
-    "    name=\"Forecast histogram\"\n",
+    "    marker=dict(\n",
+    "        color=hist_color,\n",
+    "    ),\n",
+    "    name=\"Forecast histogram\",\n",
     ")\n",
     "\n",
-    "figure.add_annotation(x=total_min+2, y=total_max-1,\n",
-    "        text=\"underprediction\",\n",
-    "        showarrow=False)\n",
+    "figure.add_annotation(x=total_min + 2, y=total_max - 1, text=\"underprediction\", showarrow=False)\n",
     "\n",
-    "figure.add_annotation(x=total_max-1, y=total_min+1,\n",
-    "        text=\"overprediction\",\n",
-    "        showarrow=False)\n",
+    "figure.add_annotation(x=total_max - 1, y=total_min + 1, text=\"overprediction\", showarrow=False)\n",
     "\n",
     "figure.update_layout(\n",
-    "    title='Reliability Diagram for Synthetic Temperature Forecast',\n",
-    "    xaxis_title='Forecasted value (Celsius)',\n",
-    "    yaxis_title='Recalibrated value (Celsius)',\n",
-    "    legend=dict(x=0.25,y=0.9),\n",
+    "    title=\"Reliability Diagram for Synthetic Temperature Forecast\",\n",
+    "    xaxis_title=\"Forecasted value (Celsius)\",\n",
+    "    yaxis_title=\"Recalibrated value (Celsius)\",\n",
+    "    legend=dict(x=0.25, y=0.9),\n",
     "    height=700,\n",
     "    width=700,\n",
     ")\n",
