moved isotonic regression to scores.processing

--- a/tutorials/Isotonic_Regression.ipynb
+++ b/tutorials/Isotonic_Regression.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scores.continuous.isoreg_impl import isotonic_fit\n",
+    "from scores.processing.isoreg_impl import isotonic_fit\n",
     "import numpy as np\n",
     "import plotly.graph_objects as go"
    ]
